updated logging and addressed intellij warnings for disase model MEL